--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.js"></script>
-        <script src="https://unpkg.com/ml5@1/dist/ml5.js"></script>
+        <script src="https://unpkg.com/ml5@latest/dist/ml5.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
         <meta charset="utf-8" />
